--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ https://templatemo.com/tm-591-villa-agency
           <ul class="social-links">
             <li><a href="https://www.facebook.com/profile.php?id=61553536036388" target="_blank"><i class="fab fa-facebook"></i></a></li>
             <li><a href="https://x.com" target="_blank"><i class="fab fa-twitter"></i></a></li>
-            <!-- <li><a href="https://linkedin"><i class="fab fa-linkedin"></i></a></li> -->
+            <li><a href="https://wa.me/9883047703"><i class="fa-brands fa-whatsapp"></i></a></li>
             <li><a href="https://instagram.com/tourzup" target="_blank"><i class="fab fa-instagram"></i></a></li>
           </ul>
         </div>
@@ -79,11 +79,11 @@ https://templatemo.com/tm-591-villa-agency
                     <!-- ***** Logo End ***** -->
                     <!-- ***** Menu Start ***** -->
                     <ul class="nav">
-                      <li><a href="index.html" class="active">Home</a></li>
-                      <li><a href="properties.html">Properties</a></li>
-                      <li><a href="property-details.html">Property Details</a></li>
-                      <li><a href="contact.html">Contact Us</a></li>
-                      <li><a href="#"><i class="fa fa-calendar"></i> Schedule a visit</a></li>
+                      <li><a href="index.html" class="active">Home</a></li>                   
+                      <li><a href="Destinations.html">Destination Details</a></li>
+                      <li><a href="Upcoming Journey.html">Upcoming Journey</a></li>
+                      <li><a href="contact.html">Our Team</a></li>
+                      <li><a href="https://calendar.google.com/calendar/u/0/r/month?pli=1" target=_blank><i class="fa fa-calendar"></i>Calender</a></li>
                   </ul>   
                     <a class='menu-trigger'>
                         <span>Menu</span>
@@ -106,14 +106,14 @@ https://templatemo.com/tm-591-villa-agency
       </div>
       <div class="item item-2">
         <div class="header-text">
-          <span class="category">Melbourne, <em>Australia</em></span>
-          <h2>Be Quick!<br>Get the best villa in town</h2>
+          <!-- <span class="category">Melbourne, <em>Australia</em></span> -->
+          <h2><br>Adventure awaits. Let's make your travel dreams a reality</h2>
         </div>
       </div>
       <div class="item item-3">
         <div class="header-text">
-          <span class="category">Miami, <em>South Florida</em></span>
-          <h2>Act Now!<br>Get the highest level penthouse</h2>
+          <!-- <span class="category">Miami, <em>South Florida</em></span> -->
+          <h2><br>Explore. Dream. Discover. Your next adventure starts with us.</h2>
         </div>
       </div>
     </div>
@@ -125,13 +125,15 @@ https://templatemo.com/tm-591-villa-agency
         <div class="col-lg-4">
           <div class="left-image">
             <img src="assets/images/Logo.png" alt="">
-            <a href="property-details.html"><img src="assets/images/featured-icon.png" alt="" style="max-width: 60px; padding: 0px;"></a>
+            <a href="https://wa.me/9883047703" target="_blank"><img src="assets/images/WhatsApp_icon.png" alt="" style="max-width: 150px; padding: 0px;"></a>
+            <!-- <a href="property-details.html"><img src="assets/images/featured-icon.png" alt="" style="max-width: 60px; padding: 0px;"></a> -->
           </div>
         </div>
-        <div class="col-lg-5">
+        <div class="col-lg-8">
           <div class="section-heading">
-            <h6>| Featured</h6>
-            <h2>Best Appartment &amp; Sea view</h2>
+            <!-- <h6>| Featured</h6> -->
+            <h2>Best Package Tours</h2>
+            <!-- <h2>Best Package Tours &amp; Sea view</h2> -->
           </div>
           <div class="accordion" id="accordionExample">
             <div class="accordion-item">
@@ -171,7 +173,7 @@ https://templatemo.com/tm-591-villa-agency
             </div>
           </div>
         </div>
-        <div class="col-lg-3">
+        <!-- <div class="col-lg-3">
           <div class="info-table">
             <ul>
               <li>
@@ -195,12 +197,12 @@ https://templatemo.com/tm-591-villa-agency
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 
-  <div class="video section">
+  <!-- <div class="video section">
     <div class="container">
       <div class="row">
-        <div class="col-lg-4 offset-lg-4">
+        <div class="col-lg-8 offset-lg-3">
           <div class="section-heading text-center">
             <h6>| Video View</h6>
             <h2>Get Closer View & Different Feeling</h2>
@@ -252,9 +254,9 @@ https://templatemo.com/tm-591-villa-agency
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 
-  <div class="section best-deal">
+  <!-- <div class="section best-deal">
     <div class="container">
       <div class="row">
         <div class="col-lg-4">
@@ -362,25 +364,26 @@ https://templatemo.com/tm-591-villa-agency
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 
   <div class="properties section">
     <div class="container">
       <div class="row">
-        <div class="col-lg-4 offset-lg-4">
+        <div class="col-lg-12 offset-lg-2">
           <div class="section-heading text-center">
-            <h6>| Properties</h6>
-            <h2>We Provide The Best Property You Like</h2>
+            <!-- <h6>| Destinations</h6> -->
+            <!-- <h2>We Provide The Best Destination You Like</h2> -->
+          <h2>Discover Your Desires, Explore Your Way  We Provide Destinations You Like</h2>
           </div>
         </div>
       </div>
       <div class="row">
         <div class="col-lg-4 col-md-6">
           <div class="item">
-            <a href="property-details.html"><img src="assets/images/Ganga arti.jpg" alt=""></a>
+            <a href="Varanasi.html"><img src="assets/images/Ganga arti.jpg" alt=""></a>
             <span class="category">Varanasi</span>
-            <h6>$2.264.000</h6>
-            <h4><a href="property-details.html">The City of Light</a></h4>
+            <!-- <h6>$2.264.000</h6> -->
+            <h4><a href="Varanasi.html">The City of Light</a></h4>
             <ul>
               <li>Package Tour: <span>5N/6D</span></li>
               <!-- <li>Bathrooms: <span>8</span></li> -->
@@ -389,16 +392,16 @@ https://templatemo.com/tm-591-villa-agency
               <li>Parking: <span>6 spots</span></li> -->
             </ul>
             <div class="main-button">
-              <a href="property-details.html">Explore</a>
+              <a href="Varanasi.html">Explore</a>
             </div>
           </div>
         </div>
         <div class="col-lg-4 col-md-6">
           <div class="item">
-            <a href="property-details.html"><img src="assets/images/Silk Route.jpg" alt=""></a>
+            <a href="East Sikkim.html"><img src="assets/images/Silk Route.jpg" alt=""></a>
             <span class="category">East Sikkim</span>
-            <h6>$1.180.000</h6>
-            <h4><a href="property-details.html">Silk Route</a></h4>
+            <!-- <h6>$1.180.000</h6> -->
+            <h4><a href="East Sikkim.html">Silk Route</a></h4>
             <ul>
               <li>Package Tour: <span>6N/7D</span></li>
               <!-- <li>Bathrooms: <span>5</span></li>
@@ -407,16 +410,16 @@ https://templatemo.com/tm-591-villa-agency
               <li>Parking: <span>8 spots</span></li> -->
             </ul>
             <div class="main-button">
-              <a href="property-details.html">Explore</a>
+              <a href="East Sikkim.html">Explore</a>
             </div>
           </div>
         </div>
         <div class="col-lg-4 col-md-6">
           <div class="item">
-            <a href="property-details.html"><img src="assets/images/himachal 2.jpg" alt=""></a>
+            <a href="Himachal.html"><img src="assets/images/himachal 2.jpg" alt=""></a>
             <span class="category">Himachal Prodesh</span>
-            <h6>$1.460.000</h6>
-            <h4><a href="property-details.html">Shima,Manali</a></h4>
+            <!-- <h6>$1.460.000</h6> -->
+            <h4><a href="Himachal.html">Shima,Manali</a></h4>
             <ul>
               <li>Package Tour: <span>10N/11D</span></li>
               <!-- <li>Bathrooms: <span>4</span></li>
@@ -425,16 +428,16 @@ https://templatemo.com/tm-591-villa-agency
               <li>Parking: <span>10 spots</span></li> -->
             </ul>
             <div class="main-button">
-              <a href="property-details.html">Schedule a visit</a>
+              <a href="Himachal.html">Explore</a>
             </div>
           </div>
         </div>
         <div class="col-lg-4 col-md-6">
           <div class="item">
-            <a href="property-details.html"><img src="assets/images/North Sikkim.jpg" alt=""></a>
+            <a href="North Sikkim.html"><img src="assets/images/North Sikkim.jpg" alt=""></a>
             <span class="category">North Sikkim</span>
-            <h6>$584.500</h6>
-            <h4><a href="property-details.html">Small but Beautiful</a></h4>
+            <!-- <h6>$584.500</h6> -->
+            <h4><a href="North Sikkim.html">Small but Beautiful</a></h4>
             <ul>
               <li>Package Tour: <span>7N/8D</span></li>
               <!-- <li>Bathrooms: <span>3</span></li>
@@ -443,16 +446,16 @@ https://templatemo.com/tm-591-villa-agency
               <li>Parking: <span>2 cars</span></li> -->
             </ul>
             <div class="main-button">
-              <a href="property-details.html">Explore</a>
+              <a href="North Sikkim.html">Explore</a>
             </div>
           </div>
         </div>
         <div class="col-lg-4 col-md-6">
           <div class="item">
-            <a href="property-details.html"><img src="assets/images/mangroves-sundarbans-swamp-forest.jpg" alt=""></a>
+            <a href="Sundarban.html"><img src="assets/images/mangroves-sundarbans-swamp-forest.jpg" alt=""></a>
             <span class="category">Sundarban</span>
-            <h6>$925.600</h6>
-            <h4><a href="property-details.html">The Land of Mangroves</a></h4>
+            <!-- <h6>$925.600</h6> -->
+            <h4><a href="Sundarban.html">The Land of Mangroves</a></h4>
             <ul>
               <li>Package Tour: <span>2N/3D</span></li>
               <!-- <li>Bathrooms: <span>4</span></li>
@@ -461,16 +464,16 @@ https://templatemo.com/tm-591-villa-agency
               <li>Parking: <span>2 cars</span></li> -->
             </ul>
             <div class="main-button">
-              <a href="property-details.html">Explore</a>
+              <a href="Sundarban.html">Explore</a>
             </div>
           </div>
         </div>
         <div class="col-lg-4 col-md-6">
           <div class="item">
-            <a href="property-details.html"><img src="assets/images/Pel.jpg" alt=""></a>
+            <a href="West Sikkim.html"><img src="assets/images/Pel.jpg" alt=""></a>
             <span class="category">West Sikkim</span>
-            <h6>$450.000</h6>
-            <h4><a href="property-details.html">Pelling & Gangtok</a></h4>
+            <!-- <h6>$450.000</h6> -->
+            <h4><a href="West Sikkim.html">Pelling & Gangtok</a></h4>
             <ul>
               <li>Package Tour: <span>7N/8D</span></li>
               <!-- <li>Bathrooms: <span>2</span></li>
@@ -479,7 +482,7 @@ https://templatemo.com/tm-591-villa-agency
               <li>Parking: <span>3 cars</span></li> -->
             </ul>
             <div class="main-button">
-              <a href="property-details.html">Explore</a>
+              <a href="West Sikkim.html">Explore</a>
             </div>
           </div>
         </div>
@@ -492,7 +495,7 @@ https://templatemo.com/tm-591-villa-agency
       <div class="row">
         <div class="col-lg-4 offset-lg-4">
           <div class="section-heading text-center">
-            <h6>| Contact Us</h6>
+            <!-- <h6>| Contact Us</h6> -->
             <h2>Get In Touch With Us</h2>
           </div>
         </div>
@@ -522,36 +525,37 @@ https://templatemo.com/tm-591-villa-agency
             </div>
           </div>
         </div>
+
         <div class="col-lg-5">
           <form id="contact-form" action="" method="post">
             <div class="row">
               <div class="col-lg-12">
                 <fieldset>
                   <label for="name">Full Name</label>
-                  <input type="name" name="name" id="name" placeholder="Your Name..." autocomplete="on" required>
+                  <input type="name" name="name" name="name" placeholder="Your Name..." autocomplete="on" required>
                 </fieldset>
               </div>
               <div class="col-lg-12">
                 <fieldset>
                   <label for="email">Email Address</label>
-                  <input type="text" name="email" id="email" pattern="[^ @]*@[^ @]*" placeholder="Your E-mail..." required="">
+                  <input type="text" name="email" name="email" pattern="[^ @]*@[^ @]*" placeholder="Your E-mail..." required="">
                 </fieldset>
               </div>
               <div class="col-lg-12">
                 <fieldset>
                   <label for="subject">Subject</label>
-                  <input type="subject" name="subject" id="subject" placeholder="Subject..." autocomplete="on" >
+                  <input type="subject" name="subject" name="subject" placeholder="Subject..." autocomplete="on" >
                 </fieldset>
               </div>
               <div class="col-lg-12">
                 <fieldset>
                   <label for="message">Message</label>
-                  <textarea name="message" id="message" placeholder="Your Message"></textarea>
+                  <textarea name="message" name="message" placeholder="Your Message"></textarea>
                 </fieldset>
               </div>
               <div class="col-lg-12">
                 <fieldset>
-                  <button type="submit" id="form-submit" class="orange-button">Send Message</button>
+                  <button type="submit" name="form-submit" class="orange-button">Send Message</button>
                 </fieldset>
               </div>
             </div>
