--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
-    <title>Villa Agency TemplateMo - Contact Page</title>
+    <title>Tourzup - Contact Page</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -48,16 +48,16 @@ https://templatemo.com/tm-591-villa-agency
       <div class="row">
         <div class="col-lg-8 col-md-8">
           <ul class="info">
-            <li><i class="fa fa-envelope"></i> info@company.com</li>
-            <li><i class="fa fa-map"></i> Sunny Isles Beach, FL 33160</li>
+            <li><i class="fa fa-envelope"></i> info.tourzup@gmail.com</li>
+            <li><img src="assets/images/phone-icon.png" alt="" style="max-width: 20px;"> 9883047703</li>
           </ul>
         </div>
         <div class="col-lg-4 col-md-4">
           <ul class="social-links">
-            <li><a href="#"><i class="fab fa-facebook"></i></a></li>
-            <li><a href="https://x.com/minthu" target="_blank"><i class="fab fa-twitter"></i></a></li>
-            <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
-            <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+            <li><a href="https://www.facebook.com/profile.php?id=61553536036388" target="_blank"><i class="fab fa-facebook"></i></a></li>
+            <li><a href="https://x.com" target="_blank"><i class="fab fa-twitter"></i></a></li>
+            <li><a href="https://wa.me/9883047703"><i class="fa-brands fa-whatsapp"></i></a></li>
+            <li><a href="https://instagram.com/tourzup" target="_blank"><i class="fab fa-instagram"></i></a></li>
           </ul>
         </div>
       </div>
@@ -72,17 +72,17 @@ https://templatemo.com/tm-591-villa-agency
                 <nav class="main-nav">
                     <!-- ***** Logo Start ***** -->
                     <a href="index.html" class="logo">
-                        <h1>Villa</h1>
+                        <h1>Tourzup</h1>
                     </a>
                     <!-- ***** Logo End ***** -->
                     <!-- ***** Menu Start ***** -->
                     <ul class="nav">
-                      <li><a href="index.html">Home</a></li>
-                      <li><a href="properties.html">Properties</a></li>
-                      <li><a href="property-details.html">Property Details</a></li>
-                      <li><a href="contact.html" class="active">Contact Us</a></li>
-                      <li><a href="#"><i class="fa fa-calendar"></i> Schedule a visit</a></li>
-                  </ul>   
+                      <li><a href="index.html" class="active">Home</a></li>
+                      <!-- <li><a href="properties.html">Properties</a></li> -->
+                      <li><a href="Varanasi.html">Destination Details</a></li>
+                      <li><a href="contact.html">Contact Us</a></li>
+                      <!-- <li><a href="#"><i class="fa fa-calendar"></i> Schedule a visit</a></li> -->
+                  </ul> 
                     <a class='menu-trigger'>
                         <span>Menu</span>
                     </a>
@@ -98,7 +98,7 @@ https://templatemo.com/tm-591-villa-agency
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <span class="breadcrumb"><a href="#">Home</a>  /  Contact Us</span>
+          <!-- <span class="breadcrumb"><a href="#">Home</a>  /  Contact Us</span> -->
           <h3>Contact Us</h3>
         </div>
       </div>
@@ -110,21 +110,21 @@ https://templatemo.com/tm-591-villa-agency
       <div class="row">
         <div class="col-lg-6">
           <div class="section-heading">
-            <h6>| Contact Us</h6>
-            <h2>Get In Touch With Our Agents</h2>
+            <h6>Contact Us</h6>
+            <h2>Get In Touch With Us</h2>
           </div>
           <p>When you really need to download free CSS templates, please remember our website TemplateMo. Also, tell your friends about our website. Thank you for visiting. There is a variety of Bootstrap HTML CSS templates on our website. If you need more information, please contact us.</p>
           <div class="row">
             <div class="col-lg-12">
               <div class="item phone">
                 <img src="assets/images/phone-icon.png" alt="" style="max-width: 52px;">
-                <h6>010-020-0340<br><span>Phone Number</span></h6>
+                <h6>9883047703<br><span>Phone Number</span></h6>
               </div>
             </div>
             <div class="col-lg-12">
               <div class="item email">
                 <img src="assets/images/email-icon.png" alt="" style="max-width: 52px;">
-                <h6>info@villa.co<br><span>Business Email</span></h6>
+                <h6>info.tourzup@gmail.co<br><span>Business Email</span></h6>
               </div>
             </div>
           </div>
